Opened 11 years ago

Closed 11 years ago

#10556 closed bug (fixed)

Can't login to aliceadsl.fr

Reported by: pulkomandy Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by pulkomandy)

http://espace-abonne.aliceadsl.fr/

Trying to enter a login/password pair results to the socket being closed immediately after the POST data is sent. Trying to read from the socket fails.

It looks like the CGI handler on the server is doing this because something is wrong with the format of our http headers, but I couldn't find the exact problem.

Change History (1)

comment:1 by pulkomandy, 11 years ago

Description: modified (diff)
Resolution: fixed
Status: newclosed

Fixed in hrev47543.

Note: See TracTickets for help on using tickets.